--- a/saasapp/app/assets/stylesheets/application.css.scss
+++ b/saasapp/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,11 @@
  *= require_self
  */
 
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+
+
+
 h1, h2, h3{
-    font-family: 'Oswald', sans-serif;
+  font-family: 'Oswald', sans-serif;
 }
