--- a/saasapp/app/assets/stylesheets/application.css.scss
+++ b/saasapp/app/assets/stylesheets/application.css.scss
@@ -23,12 +23,19 @@ h1, h2, h3{
   font-family: 'Oswald', sans-serif;
 }
 
-body, .navbar{
+.navbar, .home-callout{
   //Gradient provided by @_ighosh @ uiGradients.com
   background: #ee0979; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #ee0979 , #ff6a00); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #ee0979 , #ff6a00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     
+}
+
+.home-callout{
+  color: white;
+  margin-top: -20px;
+  padding-top: 50px;
+  padding-bottom: 100px;
 }
 
 .navbar{
