--- a/saasapp/app/views/layouts/application.html.erb
+++ b/saasapp/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Saasapp</title>
     <%= csrf_meta_tags %>
-    <link href="//fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
