--- a/saasapp/app/assets/stylesheets/application.css.scss
+++ b/saasapp/app/assets/stylesheets/application.css.scss
@@ -18,11 +18,12 @@
 @import 'bootstrap';
 
 
-
+// Typography Styles
 h1, h2, h3{
   font-family: 'Ubuntu', sans-serif;
 }
 
+// Background Gradient
 .navbar, .home-callout{
   //Gradient provided by @_ighosh @ uiGradients.com
   background: #ee0979; /* fallback for old browsers */
@@ -31,6 +32,7 @@ h1, h2, h3{
     
 }
 
+// Home Page Styles
 .home-callout{
   color: white;
   margin-top: -20px;
@@ -38,24 +40,18 @@ h1, h2, h3{
   padding-bottom: 100px;
 }
 
+
+// Nav Styles
 .navbar{
   border:none;
 }
 
-.navbar-default .navbar-brand {
+.navbar-default .navbar-brand, 
+.navbar-default .navbar-nav > li > a {
   color: white;
+  &:hover{
+    color: white;
+    opacity: 0.75;
+  }
 }
 
-.navbar-default .navbar-brand:hover{
-  color: white;
-  opacity: 0.75;
-}
-
-.navbar-default .navbar-nav > li > a{
-  color:white;
-}
-
-.navbar-default .navbar-nav > li > a:hover{
-  color:white;
-  opacity: 0.75;
-}
