--- a/saasapp/app/assets/stylesheets/application.css.scss
+++ b/saasapp/app/assets/stylesheets/application.css.scss
@@ -43,6 +43,11 @@ h1, h2, h3{
 }
 
 
+.navbar-brand{
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 800;
+}
+
 // Nav Styles
 .navbar{
   border:none;
