--- a/saasapp/app/views/pages/about.html.erb
+++ b/saasapp/app/views/pages/about.html.erb
@@ -1,1 +1,6 @@
-<h1>About Page</h1>
+<div class="container text-center">
+    <h1>About Page</h1>
+    <P>We are DevMatch. Our company focuses on creating an exclusive community
+    of developers and entrepreneurs to meet and connect on a vast range of 
+    projects.</P>
+</div>
