--- a/saasapp/app/assets/stylesheets/application.css.scss
+++ b/saasapp/app/assets/stylesheets/application.css.scss
@@ -42,11 +42,23 @@ h1, h2, h3{
   padding-bottom: 100px;
 }
 
-
+// Logo formating
 .navbar-brand{
   font-family: 'Ubuntu', sans-serif;
   font-weight: 800;
 }
+
+
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: white;
+}
+.navbar-default .navbar-toggle {
+  border: 2px solid white;
+  &:hover, &:focus {
+    background-color: #EE0D9F;
+  }
+}
+
 
 // Nav Styles
 .navbar{
