--- a/saasapp/app/views/contact_mailer/contact_email.html.erb
+++ b/saasapp/app/views/contact_mailer/contact_email.html.erb
@@ -4,7 +4,7 @@
     <body>
         <p>You have received a message from the site's contact form, from
         <%= "#{ @name }, #{ @email }" %></p>
-        <p><%= @body %></p>
+        <p><%= @comments %></p>
     </body>
 </html>
 
